; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/lwip/extr_mg_lwip_ev_mgr.c_mg_lwip_if_init.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/lwip/extr_mg_lwip_ev_mgr.c_mg_lwip_if_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_iface = type { i32 }

@LL_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"Mongoose %s, LwIP %u.%u.%u\00", align 1
@MG_VERSION = common dso_local global i32 0, align 4
@LWIP_VERSION_MAJOR = common dso_local global i32 0, align 4
@LWIP_VERSION_MINOR = common dso_local global i32 0, align 4
@LWIP_VERSION_REVISION = common dso_local global i32 0, align 4
@s_tcpip_call_lock_sem = common dso_local global i32 0, align 4
@s_tcpip_call_sync_sem = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mg_lwip_if_init(%struct.mg_iface* %0) #0 {
  %2 = alloca %struct.mg_iface*, align 8
  store %struct.mg_iface* %0, %struct.mg_iface** %2, align 8
  %3 = load i32, i32* @LL_INFO, align 4
  %4 = load i32, i32* @MG_VERSION, align 4
  %5 = load i32, i32* @LWIP_VERSION_MAJOR, align 4
  %6 = load i32, i32* @LWIP_VERSION_MINOR, align 4
  %7 = load i32, i32* @LWIP_VERSION_REVISION, align 4
  %8 = sext i32 %7 to i64
  %9 = inttoptr i64 %8 to i8*
  %10 = call i32 @LOG(i32 %3, i8* %9)
  %11 = call i32 @MG_CALLOC(i32 1, i32 4)
  %12 = load %struct.mg_iface*, %struct.mg_iface** %2, align 8
  %13 = getelementptr inbounds %struct.mg_iface, %struct.mg_iface* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  %14 = call i32 @sys_sem_new(i32* @s_tcpip_call_lock_sem, i32 1)
  %15 = call i32 @sys_sem_new(i32* @s_tcpip_call_sync_sem, i32 0)
  ret void
}

declare dso_local i32 @LOG(i32, i8*) #1

declare dso_local i32 @MG_CALLOC(i32, i32) #1

declare dso_local i32 @sys_sem_new(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
